[gd_scene load_steps=39 format=2]

[ext_resource path="res://monster/dwarf/dwarf.gd" type="Script" id=1]
[ext_resource path="res://monster/dwarf/states/idle.gd" type="Script" id=2]
[ext_resource path="res://monster/dwarf/states/motion/roam.gd" type="Script" id=3]
[ext_resource path="res://monster/dwarf/states/motion/return.gd" type="Script" id=4]
[ext_resource path="res://monster/dwarf/states/motion/spot.gd" type="Script" id=5]
[ext_resource path="res://monster/dwarf/states/motion/follow.gd" type="Script" id=6]
[ext_resource path="res://monster/dwarf/states/stagger.gd" type="Script" id=7]
[ext_resource path="res://monster/dwarf/states/motion/charge_prepare.gd" type="Script" id=8]
[ext_resource path="res://monster/dwarf/states/motion/charge.gd" type="Script" id=9]
[ext_resource path="res://monster/dwarf/states/charge_cooldown.gd" type="Script" id=10]
[ext_resource path="res://monster/dwarf/states/die.gd" type="Script" id=11]
[ext_resource path="res://monster/dwarf/states/motion/shoot.gd" type="Script" id=12]
[ext_resource path="res://monster/dwarf/states/motion/end_wave.gd" type="Script" id=13]
[ext_resource path="res://monster/dwarf/sprites/sm_dwarf03.png" type="Texture" id=14]
[ext_resource path="res://monster/dwarf/sprites/sm_dwarf09.png" type="Texture" id=15]
[ext_resource path="res://monster/dwarf/sprites/sm_dwarf06.png" type="Texture" id=16]
[ext_resource path="res://monster/dwarf/sprites/sm_dwarf12.png" type="Texture" id=17]
[ext_resource path="res://monster/dwarf/sprites/sm_dwarf13.png" type="Texture" id=18]
[ext_resource path="res://monster/exclamation-mark.png" type="Texture" id=19]
[ext_resource path="res://objects/miscellaneous/status_burning.png" type="Texture" id=20]
[ext_resource path="res://particles/BurnParticles.tscn" type="PackedScene" id=21]
[ext_resource path="res://characters/Health.tscn" type="PackedScene" id=22]
[ext_resource path="res://sfx/dash.ogg" type="AudioStream" id=23]
[ext_resource path="res://sfx/dwarf_punch.ogg" type="AudioStream" id=24]
[ext_resource path="res://sfx/dwarf_punch_impact.ogg" type="AudioStream" id=25]

[sub_resource type="Animation" id=1]

resource_name = "SETUP"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15.6292, -9.49536 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Body:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/Body:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyPivot/Body:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodyPivot/Arm:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyPivot/Hand:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BodyPivot/exclamation-mark:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]

resource_name = "charge"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Arm:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Hand:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]

resource_name = "charge_prepare"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.367583 ),
"update": 0,
"values": [ Vector2( -15, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Hand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Arm:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]

length = 0.7
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.35, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.35, 0.65 ),
"transitions": PoolRealArray( 0.207053, 5.25469, 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ), Vector2( 1.3, 1.8 ), Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=5]

length = 5.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( -3.36461, -3.74783, 1 ),
"update": 0,
"values": [ Vector2( -15, -10 ), Vector2( -15, -30 ), Vector2( -15, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Hand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Arm:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]

resource_name = "shoot"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.9
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/exclamation-mark:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/exclamation-mark:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40.7887, -122.618 ), Vector2( 67.479, -177.535 ), Vector2( 80.3541, -196.371 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/exclamation-mark:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.25 ),
"transitions": PoolRealArray( 0.0676155, 1, 1 ),
"update": 0,
"values": [ 3.97992, 12.3991, 14.5039 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/exclamation-mark:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.130625, 1 ),
"update": 0,
"values": [ Vector2( 0.315916, 0.315916 ), Vector2( 2, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyPivot/exclamation-mark:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 3.37112, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BodyPivot/Body:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyPivot/Arm:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BodyPivot/Hand:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]

length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Hand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Arm:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/Arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 60.0, 45.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyPivot/Hand:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 26.6659, 31.4446 ), Vector2( 15.2628, 42.8477 ), Vector2( 26.6659, 31.4446 ) ]
}

[sub_resource type="Animation" id=10]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -15.6292, -9.49536 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 1.4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyPivot/Body:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyPivot/Body:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyPivot/Body:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=11]

length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( 0, 0, 0, 0, 0, 1 ),
"update": 0,
"values": [ Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=12]

custom_solver_bias = 0.0
radius = 71.9364
height = 75.4304

[sub_resource type="ParticlesMaterial" id=13]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 100, 125, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
angular_velocity = 8.04345e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 6.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Gravity", "Initial Velocity", "Linear Accel", "Scale", "Spread", "Trail" ]

[node name="Dwarf" type="KinematicBody2D" index="0" groups=[
"monsters",
]]

position = Vector2( -1.98642, 0.817726 )
input_pickable = false
collision_layer = 8
collision_mask = 7
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z Index" ]
ARRIVE_DISTANCE = 6.0
DEFAULT_SLOW_RADIUS = 200.0
DEFAULT_MAX_SPEED = 300.0
MASS = 8.0
SPOT_RANGE = 6000.0

[node name="States" type="Node" parent="." index="0"]

[node name="Idle" type="Node" parent="States" index="0"]

script = ExtResource( 2 )

[node name="Roam" type="Node" parent="States" index="1"]

script = ExtResource( 3 )
max_roam_speed = 200.0
ROAM_RADIUS = 140.0

[node name="Return" type="Node" parent="States" index="2"]

script = ExtResource( 4 )
max_return_speed = 200.0

[node name="Spot" type="Node" parent="States" index="3"]

script = ExtResource( 5 )

[node name="Follow" type="Node" parent="States" index="4"]

script = ExtResource( 6 )
CHARGE_RANGE = 300.0
FOLLOW_RANGE = 6000.0
max_follow_speed = 400.0
SHOOT_RANGE = 600.0
SHOOT_TIME = 2.0

[node name="Stagger" type="Node" parent="States" index="5"]

script = ExtResource( 7 )

[node name="ChargePrepare" type="Node" parent="States" index="6"]

script = ExtResource( 8 )
CHARGE_PREPARE_DURATION = 0.5

[node name="Charge" type="Node" parent="States" index="7"]

script = ExtResource( 9 )
CHARGE_MAX_DISTANCE = 2000.0
max_charge_speed = 1400.0

[node name="ChargeCooldown" type="Node" parent="States" index="8"]

script = ExtResource( 10 )
CHARGE_COOLDOWN_DURATION = 0.6

[node name="Die" type="Node" parent="States" index="9"]

script = ExtResource( 11 )

[node name="Shoot" type="Node" parent="States" index="10"]

script = ExtResource( 12 )
primary_weapon_path = "res://monster/dwarf/weapon/DwarfGun.tscn"

[node name="EndWave" type="Node" parent="States" index="11"]

script = ExtResource( 13 )
max_return_speed = 800.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SETUP = SubResource( 1 )
anims/charge = SubResource( 2 )
anims/charge_prepare = SubResource( 3 )
anims/die = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/shoot = SubResource( 6 )
anims/spot = SubResource( 7 )
anims/stagger = SubResource( 8 )
anims/walk = SubResource( 9 )
blend_times = [  ]

[node name="Stagger" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SETUP = SubResource( 10 )
anims/stagger = SubResource( 11 )
blend_times = [  ]

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="4"]

position = Vector2( 10, 0 )
shape = SubResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="BodyPivot" type="Position2D" parent="." index="5"]

editor/display_folded = true
z_index = 2
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Body" type="Sprite" parent="BodyPivot" index="0"]

position = Vector2( -15.6292, -9.49536 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 14 )
flip_h = true
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Arm" type="Sprite" parent="BodyPivot" index="1"]

visible = false
position = Vector2( -11.6759, -5.56784 )
rotation = 1.03195
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 17 )
flip_h = true
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Hand" type="Sprite" parent="BodyPivot" index="2"]

visible = false
position = Vector2( 15.9268, 42.1836 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 18 )
flip_h = true
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="exclamation-mark" type="Sprite" parent="BodyPivot" index="3"]

visible = false
position = Vector2( 80.3541, -196.371 )
rotation = 0.253141
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="WeaponPivot" type="Position2D" parent="." index="6"]

editor/display_folded = true
z_index = 2
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="PrimaryWeaponSpawn" type="Position2D" parent="WeaponPivot" index="0"]

position = Vector2( 134.072, 3.06368e-05 )

[node name="StatusPivot" type="Position2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( 10, 0 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="StatusIcon" type="Sprite" parent="StatusPivot" index="0"]

visible = false
position = Vector2( 92.6279, -121.362 )
z_index = 6
texture = ExtResource( 20 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="BurnParticles" parent="StatusPivot" index="1" instance=ExtResource( 21 )]

[node name="ChargeParticles" type="Particles2D" parent="." index="8"]

position = Vector2( 63.3637, -4.30785 )
scale = Vector2( -1, 1 )
z_index = 6
emitting = false
amount = 24
lifetime = 0.3
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform", "Z Index" ]

[node name="RoamTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Health" parent="." index="10" instance=ExtResource( 22 )]

max_health = 2000

[node name="RayCast2D" type="RayCast2D" parent="." index="11"]

visible = false
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="ChargePrepare" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 23 )
volume_db = 2.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ChargeStart" type="AudioStreamPlayer" parent="." index="13"]

stream = ExtResource( 24 )
volume_db = 4.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ChargeImpact" type="AudioStreamPlayer" parent="." index="14"]

stream = ExtResource( 25 )
volume_db = 9.0
autoplay = false
mix_target = 0
bus = "Master"


